Fix handling of wildcard responses.
