# src/it/basic/src/main/resources/openapi/spec.yaml
@@ -164,26 +164,6 @@ paths:
                 $ref: '#/components/schemas/ResponseMultiple300'
         404:
           description: Ok.
-  /response/default/ok:
-    get:
-      operationId: defaultWithOk
-      tags:
-      - response
-      responses:
-        default:
-          description: Ok.
-          content:
-            application/json:
-              schema:
-                type: string
-  /response/default/noContent:
-    get:
-      operationId: defaultWithNoContent
-      tags:
-      - response
-      responses:
-        default:
-          description: NoContent.
   /model:
     get:
       description: 'Get list of models'
